--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async='async'></script>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">    
+   <meta name="viewport" content="width=device-width, initial-scale=1">   
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">   
    <script src='locationapi.js'></script>
    
 <head>
