--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">   
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">   
-   <script src='locationapi.js'></script>
+   <!--<script src='locationapi.js'></script>-->
    
 <head>
 </head>
