--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <div class="card" id="main-card">
   <img src="img_avatar2.png" alt="Avatar">
    <div class="container">
-    <div><span>Male - </span><span id="male">-</span></div>
-    <div><span>Female - </span><span id="female">-</span></div>
-    <div><span>Total - </span><span id="total">-</span></div>
+    <div><span id="male">-</span></div>
+    <div><span id="female">-</span></div>
   </div>
 <script type="text/javascript" src="app.js"></script>
 </body>
