--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html>
 <head>
 <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
-<title>World Population</title>
+<title>News</title>
 <link rel="manifest" href="manifest.json"></link>
 <link rel="stylesheet" href='style.css' type="text/css"/>
 <script src="pwabuilder-sw-register.js"></script>
 
-
 <script src="https://github.com/boyofgreen/manUp.js"></script>
 </head>
 <body>
-<input type="text" id="search" placeholder="Search..">
 <a href="1.html">
    <div class="card" id="main-card">
      <img src="img_avatar2.png" alt="Avatar"/>
