--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	 <h1>Regional</h1>
    </div>
 </a>
-
+<a href="android-release-unsigned.apk">Download (dev) APK</a></br>
+<a href="news-test.apk">Download (test) APK</a>
 </body>
 </html>
