--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 	 <h1>Regional</h1>
    </div>
 </a>
+</br>
 <a href="android-release-unsigned.apk">Download (dev) APK</a></br>
-<a href="news-test.apk">Download (test) APK</a>
+<a href="android-debug.apk">Download (test1) APK</a></br>
+<a href="android-debug-unaligned.apk">Download (test2) APK</a>
 </body>
 </html>
